gRPC - update user
